feat: se arreglo los problemas con los leds, boton y buzzer, y se llevo las variables de deteccion de somnolencia a un objeto para usarlo por referencia

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-PIN_LED_ROJO=11
-PIN_LED_AMARILLO=12
-PIN_LED_VERDE=13
+PIN_LED_ROJO=12
+PIN_LED_AMARILLO=18
+PIN_LED_VERDE=16
 
-PIN_BUZZER=15
-PIN_BOTON_CALIBRAR=16
+PIN_BUZZER=7
+PIN_BOTON_CALIBRAR=38
 
-NOMBRE_ARCHIVO_CALIBRACION="calibracion.txt"
+NOMBRE_ARCHIVO_CALIBRACION="calibracion"
 RUTA_ARCHIVO_CALIBRACION="./"
