feat: salir de manera segura y cambio de calibracion

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ PIN_LED_VERDE=16
 
 PIN_BUZZER=7
 PIN_BOTON_CALIBRAR=38
+PIN_RELE=32
 
 NOMBRE_ARCHIVO_CALIBRACION="calibracion"
 RUTA_ARCHIVO_CALIBRACION="./"
